<resources>
    <string name="app_name">ListaCompras</string>
    <string name="txt_titulo_lista_de_compras">Lista de compras</string>
    <string name="txt_edit_adicione_um_produto">Adicione um produto</string>
    <string name="txt_adicionar_produto">Adicionar produto</string>
    <string name="txt_edit_quantidade">Quantidade</string>
    <string name="txt_edit_localidade">Localidade</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_finalizar">Finalizar</string>
</resources>