<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginTop="43dp"
                    android:backgroundTint="#00FFFFFF"
                    android:src="?attr/homeAsUpIndicator"
                    app:tint="#020202" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="55dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/txt_titulo_lista_de_compras"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:drawableTint="#000E0E0E" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="138dp"
                android:layout_height="117dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="155dp"
                android:src="@drawable/cesta_de_compras" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/txt_adicionar_produto"
                android:textColor="#050505"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="397dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:ems="10"
                android:hint="@string/txt_edit_adicione_um_produto"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editTextQuantidade"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:ems="10"
                android:hint="@string/txt_edit_quantidade"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextLocalidade"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:ems="10"
                android:hint="@string/txt_edit_localidade"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="62dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_salvar"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/txt_button_salvar" />

                <Button
                    android:id="@+id/button_limpar"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="135dp"
                    android:text="@string/txt_button_limpar" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="61dp" />

            <Button
                android:id="@+id/button_finalizar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:text="@string/txt_button_finalizar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>